{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 45,
  "lineage": "848c1bf9-3714-c3b5-874e-6ef5f9e69a06",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c4e1b057a24b774",
            "arn": "arn:aws:ec2:ap-south-1:539935451710:elastic-ip/eipalloc-09c4e1b057a24b774",
            "association_id": "eipassoc-0f831775a3a724f34",
            "domain": "vpc",
            "id": "eipalloc-09c4e1b057a24b774",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-037d766e12cc222bc",
            "private_dns": "ip-10-0-0-195.ap-south-1.compute.internal",
            "private_ip": "10.0.0.195",
            "public_dns": "ec2-3-111-5-60.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.5.60",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hcl-nat-eip"
            },
            "tags_all": {
              "Name": "hcl-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hcl-igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539935451710:internet-gateway/igw-0db475717bf7b9b49",
            "id": "igw-0db475717bf7b9b49",
            "owner_id": "539935451710",
            "tags": {
              "Name": "hcl-igw"
            },
            "tags_all": {
              "Name": "hcl-igw"
            },
            "vpc_id": "vpc-01178962d343ab375"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hcl_nat_gw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c4e1b057a24b774",
            "association_id": "eipassoc-0f831775a3a724f34",
            "connectivity_type": "public",
            "id": "nat-0191a1f6747a6f2c6",
            "network_interface_id": "eni-037d766e12cc222bc",
            "private_ip": "10.0.0.195",
            "public_ip": "3.111.5.60",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b46c9a2eb9506feb",
            "tags": {
              "Name": "hcl-nat-gw"
            },
            "tags_all": {
              "Name": "hcl-nat-gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.hcl-igw",
            "module.vpc.aws_subnet.pub_sub_1",
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539935451710:route-table/rtb-040c5b39346ca64c4",
            "id": "rtb-040c5b39346ca64c4",
            "owner_id": "539935451710",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db475717bf7b9b49",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hcl-public-rt"
            },
            "tags_all": {
              "Name": "hcl-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01178962d343ab375"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.hcl-igw",
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539935451710:route-table/rtb-00dc8a8ae4e19e7a7",
            "id": "rtb-00dc8a8ae4e19e7a7",
            "owner_id": "539935451710",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0191a1f6747a6f2c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01178962d343ab375"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.hcl-igw",
            "module.vpc.aws_nat_gateway.hcl_nat_gw",
            "module.vpc.aws_subnet.pub_sub_1",
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef6ddca8e858045f",
            "route_table_id": "rtb-040c5b39346ca64c4",
            "subnet_id": "subnet-0b46c9a2eb9506feb"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.hcl-igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub_1",
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0550062bb1b3b5a2d",
            "route_table_id": "rtb-040c5b39346ca64c4",
            "subnet_id": "subnet-0a909949d17b527a7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.hcl-igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub_2",
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_3",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033755af559decc0e",
            "route_table_id": "rtb-040c5b39346ca64c4",
            "subnet_id": "subnet-0cdecde866198032b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.hcl-igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_sub_3",
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sub_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e389ad4ff05e0455",
            "route_table_id": "rtb-00dc8a8ae4e19e7a7",
            "subnet_id": "subnet-0805c21c05889f037"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.hcl-igw",
            "module.vpc.aws_nat_gateway.hcl_nat_gw",
            "module.vpc.aws_route_table.pvt_rt",
            "module.vpc.aws_subnet.pub_sub_1",
            "module.vpc.aws_subnet.pvt_sub_1",
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sub_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa4d7183499d6e37",
            "route_table_id": "rtb-00dc8a8ae4e19e7a7",
            "subnet_id": "subnet-0fe8929670673b601"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.hcl-igw",
            "module.vpc.aws_nat_gateway.hcl_nat_gw",
            "module.vpc.aws_route_table.pvt_rt",
            "module.vpc.aws_subnet.pub_sub_1",
            "module.vpc.aws_subnet.pvt_sub_2",
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sub_3",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0819f450237ce22e8",
            "route_table_id": "rtb-00dc8a8ae4e19e7a7",
            "subnet_id": "subnet-08f038799ed6b4d06"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.hcl-igw",
            "module.vpc.aws_nat_gateway.hcl_nat_gw",
            "module.vpc.aws_route_table.pvt_rt",
            "module.vpc.aws_subnet.pub_sub_1",
            "module.vpc.aws_subnet.pvt_sub_3",
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539935451710:security-group/sg-0e7dd3483530a5499",
            "description": "Allow SSH \u0026 HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7dd3483530a5499",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from any IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Jenkins-agent port",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              }
            ],
            "name": "Bastion-Sg",
            "name_prefix": "",
            "owner_id": "539935451710",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-Sg"
            },
            "tags_all": {
              "Name": "Bastion-Sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01178962d343ab375"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539935451710:security-group/sg-0eaa9b5e52eb98182",
            "description": "Allow SSH \u0026 HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eaa9b5e52eb98182",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "ecs-Sg",
            "name_prefix": "",
            "owner_id": "539935451710",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECS Application Security Group"
            },
            "tags_all": {
              "Name": "ECS Application Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01178962d343ab375"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539935451710:subnet/subnet-0b46c9a2eb9506feb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b46c9a2eb9506feb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539935451710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_1"
            },
            "tags_all": {
              "Name": "pub_sub_1"
            },
            "vpc_id": "vpc-01178962d343ab375"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539935451710:subnet/subnet-0a909949d17b527a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a909949d17b527a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539935451710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_2"
            },
            "tags_all": {
              "Name": "pub_sub_2"
            },
            "vpc_id": "vpc-01178962d343ab375"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_3",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539935451710:subnet/subnet-0cdecde866198032b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdecde866198032b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539935451710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub_3"
            },
            "tags_all": {
              "Name": "pub_sub_3"
            },
            "vpc_id": "vpc-01178962d343ab375"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539935451710:subnet/subnet-0805c21c05889f037",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0805c21c05889f037",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539935451710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt_sub_1"
            },
            "tags_all": {
              "Name": "pvt_sub_1"
            },
            "vpc_id": "vpc-01178962d343ab375"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539935451710:subnet/subnet-0fe8929670673b601",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe8929670673b601",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539935451710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt_sub_2"
            },
            "tags_all": {
              "Name": "pvt_sub_2"
            },
            "vpc_id": "vpc-01178962d343ab375"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sub_3",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539935451710:subnet/subnet-08f038799ed6b4d06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f038799ed6b4d06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "539935451710",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt_sub_3"
            },
            "tags_all": {
              "Name": "pvt_sub_3"
            },
            "vpc_id": "vpc-01178962d343ab375"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hcl"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hcl",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:539935451710:vpc/vpc-01178962d343ab375",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0492a4bf4fe67f22f",
            "default_route_table_id": "rtb-0a1502d7f4e27d9b8",
            "default_security_group_id": "sg-0883571c986d728ce",
            "dhcp_options_id": "dopt-b2facbda",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01178962d343ab375",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a1502d7f4e27d9b8",
            "owner_id": "539935451710",
            "tags": {
              "Name": "hcl-vpc"
            },
            "tags_all": {
              "Name": "hcl-vpc"
            }
          }
        }
      ]
    }
  ]
}